<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielbraga.android.musicapp.LibraryActivity">

    <TextView
        style="@style/ActivityTextView"
        android:text="@string/activity_library_text" />

    <Button
        android:id="@+id/library_artist"
        style="@style/ActivityButton"
        android:text="@string/artist" />

    <Button
        android:id="@+id/library_album"
        style="@style/ActivityButton"
        android:text="@string/album" />

    <Button
        android:id="@+id/library_genre"
        style="@style/ActivityButton"
        android:text="@string/genre" />

    <Button
        android:id="@+id/library_all"
        style="@style/ActivityButton"
        android:text="@string/all_music" />
</LinearLayout>
