<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielbraga.android.musicapp.MainActivity">

    <TextView
        style="@style/ActivityTextView"
        android:text="@string/activity_main_text"/>

    <Button
        style="@style/ActivityButton"
        android:id="@+id/now_playing"
        android:text="@string/now_playing" />

    <Button
        style="@style/ActivityButton"
        android:id="@+id/library"
        android:text="@string/library" />

    <Button
        style="@style/ActivityButton"
        android:id="@+id/music_store"
        android:text="@string/music_store" />

</LinearLayout>
